--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "@types/react-window": "^1.8.8",
     "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
+    "react-window": "^1.8.11",
     "sass": "^1.86.0",
     "socket.io-client": "^4.8.1",
     "uuid": "^11.1.0"
