--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "@types/chart.js": "^2.9.41",
     "@types/react-window": "^1.8.8",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.8",
+    "framer-motion": "^12.5.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-window": "^1.8.11",
